--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,7 @@
 </head>
 
 <body>
-  <!-- Load the application -->
-  <script src="/dist/common-dependencies.js"></script>
-  <script src="/dist/root-application.js"></script>
-
+  <div id="cheating_panel"></div>
   <div class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">電車情報</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +65,7 @@
       <div class="weather-city mr-auto mt-2 mt-lg-0">
         <div class="weather-weather-icon">
           <svg width="100" height="100">
-            <use xlink:href="#sun" x="0" y="0"></use>
+            <use xlink:href="#sunny" x="0" y="0"></use>
           </svg>
         </div>
         <div class="weather-temparature">?°C</div>
@@ -88,6 +85,8 @@
           <use xlink:href="#sangenyaya" width="160" height="80" x="0" y="700"></use>
           <use xlink:href="#ikejiri-oohashi" width="160" height="80" x="0" y="800"></use>
           <use xlink:href="#shibuya" width="160" height="80" x="0" y="900"></use>
+          <!-- <use xlink:href="#DentoDownLocal" x="200" y="930"></use> -->
+          <!-- <text text-anchor="middle" x="208" y="20" font-family="Verdana" font-size="10" fill="#f00">+1</text> -->
         </svg>
       </div>
       <div class="desktop">
@@ -103,6 +102,8 @@
           <use xlink:href="#sangenyaya" width="80" height="40" x="700" y="0"></use>
           <use xlink:href="#ikejiri-oohashi" width="80" height="40" x="800" y="0"></use>
           <use xlink:href="#shibuya" width="80" height="40" x="900" y="0"></use>
+          <!-- <use xlink:href="#DentoRightLocal" x="925" y="60"></use> -->
+          <!-- <text text-anchor="middle" x="935" y="90" font-family="Verdana" font-size="10" fill="#f00">+1</text> -->
         </svg>
       </div>
     </div>
@@ -148,11 +149,11 @@
           c-0.474-0.912-1.415-1.486-2.444-1.486c-0.293,0-0.574,0.057-0.844,0.145l-15.394,90.566c-0.022,0.122-0.034,0.249-0.041,0.374
           c-0.806,17.134,7.18,32.682,19.971,42.268c3.576-0.403,7.09-1.243,10.482-2.508C347.94,500.718,359.559,475.245,351.045,452.449z"/>
       </symbol>
-      <symbol id="sun" viewBox="0 0 420 420">
+      <symbol id="sunny" viewBox="0 0 420 420">
         <g>
-          <polygon style="fill:#F5C525;" points="420,210 375.774,247.857 399.238,301.145 342.926,315.986 340.945,374.184 283.764,363.211 
-            256.724,414.779 210,380 163.276,414.779 136.236,363.211 79.055,374.184 77.073,315.986 20.762,301.144 44.226,247.858 0,210 
-            44.226,172.143 20.762,118.855 77.074,104.014 79.055,45.816 136.236,56.789 163.276,5.221 210,40 256.723,5.221 283.764,56.789 
+          <polygon style="fill:#F5C525;" points="420,210 375.774,247.857 399.238,301.145 342.926,315.986 340.945,374.184 283.764,363.211
+            256.724,414.779 210,380 163.276,414.779 136.236,363.211 79.055,374.184 77.073,315.986 20.762,301.144 44.226,247.858 0,210
+            44.226,172.143 20.762,118.855 77.074,104.014 79.055,45.816 136.236,56.789 163.276,5.221 210,40 256.723,5.221 283.764,56.789
             340.945,45.816 342.927,104.014 399.238,118.856 375.774,172.142 	"/>
           <circle style="fill:#F8A805;" cx="210" cy="210" r="140"/>
         </g>
@@ -296,7 +297,7 @@
         <path class="path1" d="M717.965 170.169h-223.907v853.831h-205.994v-853.831h-223.907v-170.169h653.808v170.169z"></path>
         <path class="path2" d="M1192.647 394.076v0l146.286-394.076h223.907l-265.703 620.968v403.032h-205.994v-403.032l-265.703-620.968h232.863l134.344 394.076z"></path>
       </symbol>
-    
+
       <!-- 混雑度アイコン -->
       <symbol id="IconExhibition0" viewBox="0 0 120 120">
         <path fill="none" d="M94 0h-68c-14.4 0-26 11.6-26 26v68c0 14.4 11.6 26 26 26h68c14.4 0 26-11.6 26-26v-68c0-14.4-11.6-26-26-26z"></path><g fill="#008DD8"><path d="M94 0h-68c-14.4 0-26 11.6-26 26v68c0 14.4 11.6 26 26 26h68c14.4 0 26-11.6 26-26v-68c0-14.4-11.6-26-26-26zm20 94c0 11-9 20-20 20h-68c-11 0-20-9-20-20v-68c0-11 9-20 20-20h68c11 0 20 9 20 20v68zM25.7 72.6c-.8-.8-2-.8-2.8 0-3.4 3.3-5.5 8.7-5.5 14.4 0 5.7 2 11.1 5.5 14.4.4.4.9.6 1.4.6.5 0 1-.2 1.4-.6.8-.8.8-2.1 0-2.8-2.7-2.6-4.3-7-4.3-11.6s1.6-9 4.3-11.6c.7-.7.8-2 0-2.8zM35.7 72.6c-.8-.8-2-.8-2.8 0-3.4 3.3-5.5 8.7-5.5 14.4 0 5.7 2 11.1 5.5 14.4.4.4.9.6 1.4.6.5 0 1-.2 1.4-.6.8-.8.8-2.1 0-2.8-2.7-2.6-4.3-7-4.3-11.6s1.6-9 4.3-11.6c.7-.7.8-2 0-2.8zM45.4 72.6c-.8-.8-2-.8-2.8 0-3.4 3.3-5.5 8.7-5.5 14.4 0 5.7 2 11.1 5.5 14.4.4.4.9.6 1.4.6.5 0 1-.2 1.4-.6.8-.8.8-2.1 0-2.8-2.7-2.6-4.3-6.9-4.3-11.6s1.6-9 4.3-11.6c.8-.7.8-2 0-2.8zM70 36.5c3.2 0 6.3-3.2 6.9-7.6.6-4.4-2.5-8.4-6.9-8.4s-7.5 4-6.9 8.4c.6 4.4 3.7 7.6 6.9 7.6zM91.7 42.4l-6.4 5.7-6.7-7.4c-.6-.6-1.4-1-2.2-1.1-.7-.4-1.5-.6-2.4-.6h-8c-.8 0-1.6.2-2.3.5-.8 0-1.7.3-2.3.9l-17.5 16.4c-1.3 1.3-1.2 3.4.1 4.8 1.4 1.4 3.5 1.5 4.8.2l11.2-10.5v22.7h-6c-2.2 0-4 1.8-4 4 0 .2 0 .3.1.5 0 .2-.1.4-.1.7v4.7c0 2.6 1.6 4.7 4 4.7s4-2.1 4-4.7v-1.9h6c2.2 0 4-1.8 4-4v-6c0-1.1.9-2 2-2s2 .9 2 2v24h.1l-.1.5c0 1.9 1.9 3.5 4.3 3.5h5.3l1.1-.1c.2.1.5.1.7.1 1.4 0 2.5-1.1 2.5-2.5 0-.2 0-.4-.1-.5l.1-.5c0-1.9-1.9-3.5-4.3-3.5h-1.8l.1-.4.1-.6v-39.3l2.4 2.7c.7.8 1.6 1.2 2.6 1.2.8 0 1.7-.3 2.3-.9l9-8c1.4-1.3 1.6-3.5.3-4.9-1.3-1.6-3.5-1.7-4.9-.4z"></path></g>
@@ -310,11 +311,11 @@
       <symbol id="IconExhibition3" viewBox="0 0 120 120">
         <path fill="none" d="M94 0h-68c-14.4 0-26 11.6-26 26v68c0 14.4 11.6 26 26 26h68c14.4 0 26-11.6 26-26v-68c0-14.4-11.6-26-26-26z"></path><g fill="#D24601"><path d="M94 0h-68c-14.4 0-26 11.6-26 26v68c0 14.4 11.6 26 26 26h68c14.4 0 26-11.6 26-26v-68c0-14.4-11.6-26-26-26zm20 94c0 11-9 20-20 20h-68c-11 0-20-9-20-20v-68c0-11 9-20 20-20h68c11 0 20 9 20 20v68zM34.3 65.9c3.4 0 6.6-3.3 7.2-7.9.6-4.5-2.6-8.6-7.2-8.6s-7.8 4.1-7.2 8.6c.6 4.6 3.8 7.9 7.2 7.9zM40 68h-12c-3.3 0-6 3.1-6 6.4v20c0 2.2 1.2 4.1 3 5.2v5.4h8v-5h2v5h8v-5.4c1.8-1 3-3 3-5.2v-20c0-3.3-2.7-6.4-6-6.4zM86.3 65.9c3.4 0 6.6-3.3 7.2-7.9.6-4.5-2.6-8.6-7.2-8.6s-7.8 4.1-7.2 8.6c.6 4.6 3.8 7.9 7.2 7.9zM92 68h-12c-3.3 0-6 3.1-6 6.4v20c0 2.2 1.2 4.1 3 5.2v5.4h8v-5h2v5h8v-5.4c1.8-1 3-3 3-5.2v-20c0-3.3-2.7-6.4-6-6.4zM34.3 32.5c3.4 0 6.6-3.3 7.2-7.9.6-4.5-2.6-8.6-7.2-8.6s-7.8 4.1-7.2 8.6c.6 4.6 3.8 7.9 7.2 7.9zM40 35h-12c-3.3 0-6 2.7-6 6v9h4.6s0-.1.1-.1c2-2.2 4.7-3.5 7.7-3.5s5.7 1.2 7.7 3.5c0 0 0 .1.1.1h4v-9c-.2-3.3-2.9-6-6.2-6zM86.3 32.5c3.4 0 6.6-3.3 7.2-7.9.6-4.5-2.6-8.6-7.2-8.6s-7.8 4.1-7.2 8.6c.6 4.6 3.8 7.9 7.2 7.9zM92 35h-12c-3.3 0-6 2.7-6 6v9h4.6s0-.1.1-.1c2-2.2 4.7-3.5 7.7-3.5s5.7 1.2 7.7 3.5c0 0 0 .1.1.1h4v-9c-.2-3.3-2.9-6-6.2-6zM60.3 32.5c3.4 0 6.6-3.3 7.2-7.9.6-4.5-2.6-8.6-7.2-8.6s-7.8 4.1-7.2 8.6c.6 4.6 3.8 7.9 7.2 7.9zM14 37.1l6-6.7-6-6.7 5.1-5.7-2.2-2-6.9 7.7 6 6.7-6 6.7 6 6.7-6 6.7 6 6.6-6 6.7 6 6.7-6 6.7 6 6.7-6 6.7 6 6.7-5.1 5.7 2.2 2 6.9-7.7-6-6.7 6-6.7-6-6.7 6-6.7-6-6.7 6-6.7-6-6.6 6-6.7zM103.1 16l-2.2 2 5.1 5.7-6 6.7 6 6.7-6 6.7 6 6.7-6 6.6 6 6.7-6 6.7 6 6.7-6 6.7 6 6.7-6 6.7 6.9 7.7 2.2-2-5.1-5.7 6-6.7-6-6.7 6-6.7-6-6.7 6-6.7-6-6.7 6-6.6-6-6.7 6-6.7-6-6.7 6-6.7zM60.3 65.9c3.4 0 6.6-3.3 7.2-7.9.6-4.5-2.6-8.6-7.2-8.6s-7.8 4.1-7.2 8.6c.6 4.6 3.8 7.9 7.2 7.9zM66 68h-12c-3.3 0-6 3.1-6 6.4v20c0 2.2 1.2 4.1 3 5.2v5.4h8v-5h2v5h8v-5.4c1.8-1 3-3 3-5.2v-20c0-3.3-2.7-6.4-6-6.4zM66 35h-12c-3.3 0-6 2.7-6 6v9h4.6s0-.1.1-.1c2-2.2 4.7-3.5 7.7-3.5s5.7 1.2 7.7 3.5c0 0 0 .1.1.1h4v-9c-.2-3.3-2.9-6-6.2-6z"></path></g>
       </symbol>
-    
+
       <symbol id="IconTimes" viewBox="0 0 20.51 20.51">
         <path fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="3px" d="M1.06 19.45l18.39-18.39M1.06 1.06l18.39 18.39"></path>
       </symbol>
-  
+
       <g id="TrainRight">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M22.5,13.4V3.6c0-2-1.6-3.6-3.6-3.6H6.3C4.7,0,3.4,1.1,2.9,2.5H0v2h1V13H0v2h3v-0.2C3.6,16.1,4.8,17,6.3,17h12.6C20.9,17,22.5,15.4,22.5,13.4z M27,8.5L24,4v8.5L27,8.5z"></path>
       </g>
@@ -388,7 +389,7 @@
       <g id="TextDownS">
         <use xlink:href="#TextUpS" y="-4.4"></use>
       </g>
-  
+
       <g id="DentoDownExpress">
         <use xlink:href="#TrainDown" fill="#288C7C"></use>
         <use xlink:href="#ChipDown"></use>
@@ -411,6 +412,9 @@
         <use xlink:href="#TrainUp" fill="#288C7C"></use>
         <use xlink:href="#ChipUp"></use>
         <use xlink:href="#TextUpSemiExpress"></use>
+      </g>
+      <g id="DentoRightLocal">
+        <use xlink:href="#TrainRight" fill="#288C7C"></use>
       </g>
       <g id="DentoUpLocal">
         <use xlink:href="#TrainUp" fill="#288C7C"></use>
@@ -578,14 +582,14 @@
         <use xlink:href="#ChipUp"></use>
         <use xlink:href="#TextUpExpress"></use>
       </g>
-  
+
       <symbol id="IconClock" viewBox="0 0 1024 1024">
         <path class="path1" d="M874.040 149.958c-99.973-99.973-231.006-149.958-362.040-149.958s-262.069 49.985-362.042 149.958c-199.946 199.946-199.946 524.205 0 724.012 100.042 99.973 231.006 150.027 362.042 150.027s262.069-49.985 362.040-150.027c199.946-200.013 199.946-524.136 0-724.012zM825.562 825.426c-83.79 83.79-195.076 130.006-313.562 130.006-118.417 0-229.772-46.214-313.562-130.006-83.721-83.79-129.868-195.076-129.868-313.493 0-118.486 46.147-229.772 129.868-313.562 83.859-83.721 195.215-129.868 313.562-129.868s229.772 46.147 313.562 129.868 129.868 195.146 129.868 313.562-46.147 229.839-129.868 313.493zM715.441 475.384h-171.42v-240.469c0-18.925-15.359-34.284-34.284-34.284-18.787 0-34.284 15.359-34.284 34.284v274.752c0 18.856 15.428 34.284 34.284 34.284h205.704c18.925 0 34.284-15.428 34.284-34.284 0.002-18.925-15.359-34.284-34.284-34.284z"></path>
       </symbol>
       <symbol id="IconDoubleAngle" viewBox="0 0 22.21 25.72">
         <path d="M12.17,11.36,2.33.09a.27.27,0,0,0-.38,0L.09,1.68a.27.27,0,0,0,0,.38L9,12.29a.7.7,0,0,1,0,.92L.07,23.43a.27.27,0,0,0,0,.38l1.85,1.62a.27.27,0,0,0,.38,0l9.84-11.27A2.51,2.51,0,0,0,12.17,11.36Z"></path><path d="M21.17,11.36,11.33.09a.27.27,0,0,0-.38,0L9.09,1.68a.27.27,0,0,0,0,.38L18,12.29a.7.7,0,0,1,0,.92L9.07,23.43a.27.27,0,0,0,0,.38l1.85,1.62a.27.27,0,0,0,.38,0l9.84-11.27A2.51,2.51,0,0,0,21.17,11.36Z"></path>
       </symbol>
-  
+
       <!-- 他社路線アイコン -->
       <symbol id="IconJr">
         <rect fill="#32874f" width="20" height="20" rx="3" ry="3"></rect><path fill="#fff" fill-rule="evenodd" d="M14.29 11.22l2.25 2.66h-2.21a.11.11 0 0 1-.1 0l-2.34-3-.89-1.2v-.06h3.29a.39.39 0 0 0 .39-.25 1 1 0 0 0 0-.81.45.45 0 0 0-.44-.28h-4.24c-.08 0-.08 0-.08.08v3.74a1.34 1.34 0 0 1-.4 1 2.68 2.68 0 0 1-1.25.71 5.58 5.58 0 0 1-.91.18h-.86l-.92-.07a4.85 4.85 0 0 1-1.12-.23 2.69 2.69 0 0 1-1.08-.69 1.23 1.23 0 0 1-.38-.73v-2.58l.07-.07h1.62l.07.07v2a.53.53 0 0 0 .35.53 2.5 2.5 0 0 0 .63.17 4 4 0 0 0 .82.06 4.46 4.46 0 0 0 1.34-.25.52.52 0 0 0 .36-.51v-4.89c0-.08 0-.08.08-.08h6.56a1.17 1.17 0 0 1 .8.36 2.34 2.34 0 0 1 .61 1.12 3.14 3.14 0 0 1 .1 1 2.81 2.81 0 0 1-.54 1.58 1.13 1.13 0 0 1-.66.45 1.58 1.58 0 0 1-.29 0h-.63z"></path>
@@ -596,7 +600,7 @@
       <symbol id="IconMetro" viewBox="0 0 20 20">
         <rect fill="#1aa4d7" width="20" height="20" rx="3" ry="3"></rect><path fill="#fff" d="M14 6.52a11.45 11.45 0 0 0-4 2.48 11.45 11.45 0 0 0-4-2.48c-1.94-.52-2.57.87-2.2 3.13a14.57 14.57 0 0 0 1.57 4.35l2.23-.56h.1c-1.45-2-2.61-4.62-1.53-5.22.72-.4 2.15.44 3.22 1.38a7.9 7.9 0 0 0-.81.91c-.79 1.1-1.06 2.32.1 2.76a4.67 4.67 0 0 0 1.3.2 4.67 4.67 0 0 0 1.3-.2c1.16-.44.9-1.66.1-2.76a7.93 7.93 0 0 0-.8-.91c1.07-.94 2.51-1.78 3.22-1.38 1.08.6-.08 3.22-1.53 5.22h.1l2.23.56a14.58 14.58 0 0 0 1.57-4.38c.36-2.23-.26-3.62-2.17-3.1zm-4 5.68c-.77 0-1.32-.37-.39-1.58.11-.14.24-.29.39-.45a5.88 5.88 0 0 1 .39.45c.91 1.21.36 1.58-.39 1.58z"></path>
       </symbol>
-  
+
       <symbol id="IconYamanote" viewBox="0 0 170.079 170.079">
         <path fill="#B1CB39" d="M-47.919 3.907c0 7.795-6.379 14.172-14.174 14.172h-141.733c-7.796 0-14.174-6.377-14.174-14.172v-141.734c0-7.795 6.378-14.173 14.174-14.173h141.733c7.795 0 14.174 6.378 14.174 14.173v141.734zM170.079 150.236c0 10.914-8.928 19.843-19.842 19.843h-130.394c-10.913 0-19.843-8.929-19.843-19.843v-130.394c0-10.913 8.93-19.842 19.843-19.842h130.394c10.914 0 19.842 8.929 19.842 19.842v130.394z"></path><path fill="#fff" d="M18.592 18.591h132.895v132.896h-132.895z"></path><path d="M95.091 119.623v-28.51l-27.822-41.228h14.897l19.617 30.926 20.017-30.926h14.03l-28.046 41.04v28.698zM44.383 120.193c-1.539 0-3.106-.082-4.656-.243-1.559-.163-3.094-.41-4.561-.733l-.917-.201v-10.927l1.55.535c1.039.358 2.057.631 3.024.81.956.176 1.977.266 3.035.266 3.64 0 6.172-1.129 7.74-3.448 1.645-2.431 2.479-6.623 2.479-12.462v-43.905h12.695v45.945c0 8.212-1.65 14.373-4.905 18.318-3.31 4.011-8.52 6.045-15.484 6.045z"></path><path fill="#fff" d="M-84.435 151.16c15.676 0 28.438-12.764 28.438-28.465v-75.859c0-15.7-12.762-28.464-28.438-28.464h-75.881c-15.677 0-28.417 12.764-28.417 28.464v75.858c0 15.701 12.739 28.465 28.417 28.465h75.881v.001z"></path><path fill="#006CBA" d="M-160.293-.626c-26.12 0-47.413 21.306-47.413 47.425v75.924c0 26.143 21.293 47.412 47.413 47.412h75.933c26.145 0 47.438-21.271 47.438-47.412v-75.925c0-26.119-21.292-47.425-47.438-47.425l-75.933.001zm-28.449 123.348v-75.924c0-15.667 12.757-28.448 28.448-28.448h75.933c15.691 0 28.424 12.781 28.424 28.448v75.924c0 15.666-12.733 28.471-28.424 28.471h-75.933c-15.69 0-28.448-12.805-28.448-28.471"></path><path d="M-155.419 62.029h-19.014v-10.454h51.367v10.454h-19.038v55.939h-13.315zM-78.952 63.739c-4.171-1.808-8.828-2.874-13.485-2.874-4.561 0-10.477 2.013-10.477 9.265 0 11.506 29.126 6.656 29.126 28.897 0 14.574-11.519 20.104-24.932 20.104-7.227 0-10.477-.969-17.023-2.594l1.212-11.957c4.56 2.477 9.823 4.074 15.06 4.074 5.045 0 11.738-2.568 11.738-8.584 0-12.635-29.078-7.398-29.078-29.37 0-14.855 11.52-20.264 23.258-20.264 5.675 0 10.962.74 15.886 2.377l-1.285 10.926z"></path>
       </symbol>
@@ -624,7 +628,7 @@
       <symbol id="IconUenoTokyo" viewBox="0 0 170.079 170.079">
         <path fill="#841c6b" d="M-45.919-1.763c0 7.795-6.379 14.172-14.174 14.172h-141.733c-7.796 0-14.174-6.377-14.174-14.172v-141.734c0-7.795 6.378-14.173 14.174-14.173h141.733c7.795 0 14.174 6.378 14.174 14.173v141.734zM170.079 150.236c0 10.914-8.929 19.843-19.843 19.843h-130.394c-10.913 0-19.842-8.929-19.842-19.843v-130.394c0-10.913 8.929-19.842 19.842-19.842h130.394c10.914 0 19.843 8.929 19.843 19.842v130.394z"></path><path fill="#fff" d="M17.592 18.591h132.895v132.896h-132.895z"></path>
       </symbol>
-  
+
       <symbol id="IconGinza" viewBox="0 0 29.73 29.74">
         <path fill="#ed9026" d="M14.87,0A14.87,14.87,0,1,0,29.73,14.86,14.86,14.86,0,0,0,14.87,0"></path><path fill="#fff" d="M23,14.86a8.12,8.12,0,1,1-8.12-8.12A8.13,8.13,0,0,1,23,14.86"></path><path fill="#221f20" d="M19.93,14.3a6.11,6.11,0,0,1-1,3.76A4.59,4.59,0,0,1,15,19.93a4.81,4.81,0,0,1-5.07-5,4.86,4.86,0,0,1,5.15-5.12,4.42,4.42,0,0,1,4.29,2.66l-2.35,1A2.15,2.15,0,0,0,15,11.92c-1.63,0-2.48,1.55-2.48,3a2.71,2.71,0,0,0,2.51,3,1.79,1.79,0,0,0,2-1.65H15V14.3h4.91"></path>
       </symbol>
